--- a/index.css
+++ b/index.css
@@ -78,3 +78,15 @@ hr{
     font-family: "Comic Sans MS";
     font-size: 20px;
 }
+.hobby-header {
+    font-size: 35px;
+}
+.hobby-underline {
+    text-align: center!important;
+    border: 1px solid black;
+    width:40%;
+    margin:-5px auto 0;
+}
+.hobby {
+    margin-top: 45px;
+}
