--- a/index.css
+++ b/index.css
@@ -78,10 +78,10 @@ hr{
     font-family: "Comic Sans MS";
     font-size: 20px;
 }
-.hobby-header {
+.hobby-header,.project-header {
     font-size: 35px;
 }
-.hobby-underline {
+.hobby-underline,.project-underline {
     text-align: center!important;
     border: 1px solid black;
     width:40%;
